# CrimsonTech

./: CMakeLists.txt  CMakeSettings.json  README.md  client  client.cpp  crimson  crimson.hpp  main  main.cpp  main.s  makefile  server  server.cpp
cmake/: crimson_project.cmake  steam.cmake
glad/include/glad/: glad.h
glad/src/: glad.c
glad3.3/include/glad/: glad.h
glad3.3/src/: glad.c
inc/crimson/: file  game  renderer  types
inc/crimson/file.d/: BSP.hpp  MaterialLoader.hpp
inc/crimson/game.d/: Camera.hpp  FlyCamera.hpp  FreeCamera.hpp  Player.hpp  Time.hpp  Timer.hpp
inc/crimson/renderer.d/: AmbientMap.hpp  Context.hpp  DirectionalLight.hpp  IndirectVertexArray.hpp  Light.hpp  LightManager.hpp  PointLight.hpp  RenderTarget.hpp  Shader.hpp  SpotLight.hpp  StaticModel.hpp  StorageBuffer.hpp  TextureManager.hpp  VertexArray.hpp  gl.hpp
inc/crimson/types.d/: Face.hpp  Plane.hpp  Transform.hpp
inc/glad/: glad.h
inc/imgui/: imgui.h  imgui_impl_glfw.h  imgui_impl_opengl3.h  imgui_internal.h
include/file/: MappedFile.hpp  file.hpp
include/geometry/: ConPlane.hpp  Line.hpp  Plane.hpp  Transform.hpp  Vertex.hpp  geometry.hpp
include/mesh/: mesh.hpp
include/network/: UDPServer.hpp  network.hpp
include/physics/: PhysicsControllerNoRot.hpp  physics.hpp
include/render/: Camera.hpp  RenderBatch.hpp  ShaderProgram.hpp  TextureHandler.hpp  TransformHandler.hpp  render.hpp
include/script/: AppBase.hpp  Context.hpp  ScriptBase.hpp  ScriptHandler.hpp  ScriptHandler2.hpp  script.hpp
include/tensor/: Matrix.hpp  Swizzle2.hpp  Swizzle3.hpp  Vector.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp  tensor.hpp
include/tensor/obselete/: Vector2f.hpp  Vector3f.hpp  Vector4f.hpp  Vectorf.hpp
include/utils/: hdbAlloc.h  hdbError.hpp  utils.hpp
scripts/: CameraController.hpp  scripts.hpp
shaders/: CMakeLists.txt  lighting.frag  shader.frag  shader.vert
src/crimson/file.d/: BSP.cpp  CMakeLists.txt
src/crimson/game.d/: CMakeLists.txt  FlyCamera.cpp  FreeCamera.cpp  Player.cpp  Time.cpp
src/crimson/renderer.d/: AmbientMap.cpp  CMakeLists.txt  Context.cpp  IndirectVertexArray.cpp  LightManager.cpp  Shader.cpp  StaticModel.cpp  TextureManager.cpp  VertexArray.cpp
src/file/: MappedFile.cpp
src/glad/: CMakeLists.txt  glad.c
src/imgui/: CMakeLists.txt  imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_tables.cpp  imgui_widgets.cpp
src/mesh/: RenderBatch.cpp
src/network/: UDPServer.cpp
src/render/: RenderBatch.cpp  ShaderProgram.cpp  TextureHandler.cpp
src/script/: Context.cpp  ScriptHandler.cpp
src/stb/: CMakeLists.txt
tests/bsp/: CMakeLists.txt
tests/bsp/inc/: Player.hpp
tests/bsp/resources/models/: room.fbx
tests/bsp/resources/shaders/: shader.frag
tests/bsp/src/: main.cpp
tests/bsp/src/bsp/: CMakeLists.txt  main.cpp
tests/cube/: CMakeLists.txt
tests/cube/resources/shaders/: shader.frag  shader.vert
tests/cube/src/: main.cpp
tests/cube/src/cube/: CMakeLists.txt  main.cpp
tests/indirect/: CMakeLists.txt
tests/indirect/resources/shaders/: shader.frag  shader.vert
tests/indirect/src/indirect/: CMakeLists.txt  main.cpp
tests/lighting/: CMakeLists.txt
tests/lighting/resources/models/: room.fbx
tests/lighting/resources/shaders/: shader.frag  shader.vert
tests/mesh/: CMakeLists.txt
tests/mesh/src/mesh/: CMakeLists.txt  main.cpp
tests/steamworks/: CMakeLists.txt
tests/steamworks/src/steamworks/: CMakeLists.txt  main.cpp
tests/texture/: CMakeLists.txt
tests/texture/resources/shaders/: basic.frag  basic.vert  shader.frag  shader.vert
tests/texture/src/texture/: CMakeLists.txt  main.cpp
tools/: cube.blend  cube.blend1  cube.fbx  e1m1.blend  e1m1.fbx  makefile  room.fbx
tools/src/: bsp.cpp
